# VietnameseTextNormalizer

./: .gitattributes  .gitignore  ConfigSystem.h  ContextSystem.cpp  ContextSystem.h  LICENSE  Makefile  MakefileForPython2  MakefilePython2  MakefilePython3  MakefilePython3.5  MakefilePython3.6  MakefilePython3MACOS  PhonemeSystem.cpp  PhonemeSystem.h  README.md  SyllableSystem.h  UnitTestVietnameseTextNormalizer.py  VietnameseTextNormalizer.cpp  VietnameseTextNormalizer.h  VietnameseTextNormalizer.rc  VietnameseTextNormalizer.sln  VietnameseTextNormalizer.vcxproj  VietnameseTextNormalizer.vcxproj.filters  VietnameseTextNormalizerDll.vcxproj  VietnameseTextNormalizerDll.vcxproj.filters  WordSystem.h  dllmain.cpp  main.cpp  setup.cfg  setup.py
Build 2018 10 01 - Linux Python3/: UnitTestVietnameseTextNormalizer.py
CongCuChuanHoaEpubChoKindle/: README.md
TestData/: baomoi.txt  duochanoi.txt  lamchame.txt  tathy.txt
VietnameseTextNormalizerGUI/: ContextSystem.cpp  PhonemeSystem.cpp  PhonemeSystem.h  SyllableSystem.h  VietnameseTextNormalizer.cpp  VietnameseTextNormalizer.h  VietnameseTextNormalizerGUI.cpp  VietnameseTextNormalizerGUI.h  VietnameseTextNormalizerGUI.rc  VietnameseTextNormalizerGUI.vcxproj  VietnameseTextNormalizerGUI.vcxproj.filters  VietnameseTextNormalizerGUIDlg.cpp  VietnameseTextNormalizerGUIDlg.h  resource.h
VietnameseTextNormalizerGUI/res/: VietnameseTextNormalizerGUI.rc2
