[metadata]
name = VietnameseTextNormalizer
version = 1.9.3
author = Bùi Tấn Quang
author_email = langmaninternet@gmail.com
description = Vietnamese Text Normalizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/langmaninternet/VietnameseTextNormalizer
project_urls =https://github.com/langmaninternet/VietnameseTextNormalizer
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python
    Operating System :: POSIX :: Linux
	Operating System :: MacOS
	

[options]


[options.packages.find]
where = src